--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Christmas calendar</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+      <div id="root"></div>
+      <script type="module" src="/Christmas-Calendar/src/main.jsx"></script>
+
   </body>
 </html>
